--- a/vue_19_1120/package.json
+++ b/vue_19_1120/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "@nutui/nutui": "^2.1.7",
+    "axios": "^0.19.0",
     "core-js": "^3.3.2",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
     "@nutui/babel-plugin-separate-import": "^1.2.0",
@@ -22,6 +24,7 @@
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^5.0.0",
+    "postcss-plugin-px2rem": "^0.8.1",
     "prettier": "^1.18.2",
     "vue-template-compiler": "^2.6.10"
   },
