--- a/vue_19_1120/package.json
+++ b/vue_19_1120/package.json
@@ -11,6 +11,16 @@
     "@nutui/nutui": "^2.1.7",
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
+    "cssnano": "^4.1.10",
+    "install": "^0.13.0",
+    "npm": "^6.13.1",
+    "postcss-aspect-ratio-mini": "^1.0.1",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-import": "^12.0.1",
+    "postcss-px-to-viewport": "^1.1.1",
+    "postcss-url": "^8.0.0",
+    "postcss-viewport-units": "^0.1.6",
+    "postcss-write-svg": "^3.0.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3"
   },
@@ -24,8 +34,10 @@
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^5.0.0",
+    "node-sass": "^4.13.0",
     "postcss-plugin-px2rem": "^0.8.1",
     "prettier": "^1.18.2",
+    "sass-loader": "^8.0.0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
