--- a/vue_19_1120/package.json
+++ b/vue_19_1120/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.3.2",
     "cssnano": "^4.1.10",
     "install": "^0.13.0",
+    "moment": "^2.24.0",
     "npm": "^6.13.1",
     "postcss-aspect-ratio-mini": "^1.0.1",
     "postcss-cssnext": "^3.1.0",
@@ -22,7 +23,8 @@
     "postcss-viewport-units": "^0.1.6",
     "postcss-write-svg": "^3.0.1",
     "vue": "^2.6.10",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@nutui/babel-plugin-separate-import": "^1.2.0",
